--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#FFFD213D</color>
+    <color name="secondary">#FFD4D4D4</color>
+    <color name="secondary_dark">#FF424242</color>
+
 </resources>
